--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,6 @@ android {
 }
 
 dependencies {
-    implementation project(path: ':kref')
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -49,5 +47,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
     implementation 'com.google.code.gson:gson:2.8.7'
+    implementation 'com.github.dudgns0507:Kref:1.0'
 }
