Update sample app gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.google.code.gson:gson:2.8.7'
-    implementation 'com.github.dudgns0507:Kref:1.0.1'
+    implementation project(path: ':kref')
 }
