--- a/kref/build.gradle
+++ b/kref/build.gradle
@@ -1,9 +1,29 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
-    id 'com.github.dcendents.android-maven'
+    id 'maven-publish'
 }
-group = 'com.github.dudgns0507'
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+
+                groupId = 'com.github.dudgns0507'
+                artifactId = 'final'
+                version = '1.1.2'
+            }
+            debug(MavenPublication) {
+                from components.debug
+
+                groupId = 'com.github.dudgns0507'
+                artifactId = 'final-debug'
+                version = '1.1.2'
+            }
+        }
+    }
+}
 
 android {
     compileSdkVersion 31
@@ -11,8 +31,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 31
-        versionCode 4
-        versionName "1.1.1"
+        versionCode 5
+        versionName "1.1.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
