--- a/kref/build.gradle
+++ b/kref/build.gradle
@@ -4,35 +4,14 @@ plugins {
     id 'maven-publish'
 }
 
-afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                from components.release
-
-                groupId = 'com.github.dudgns0507'
-                artifactId = 'final'
-                version = '1.1.2'
-            }
-            debug(MavenPublication) {
-                from components.debug
-
-                groupId = 'com.github.dudgns0507'
-                artifactId = 'final-debug'
-                version = '1.1.2'
-            }
-        }
-    }
-}
-
 android {
     compileSdkVersion 31
 
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 31
-        versionCode 6
-        versionName "1.1.3"
+        versionCode 7
+        versionName "1.1.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 //        consumerProguardFiles "consumer-rules.pro"
@@ -71,4 +50,18 @@ dependencies {
     implementation "androidx.test:core:1.4.0"
     testImplementation "junit:junit:4.13.2"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+
+                groupId = 'com.github.dudgns0507'
+                artifactId = 'Kref'
+                version = '1.1.4'
+            }
+        }
+    }
 }
